# 3DViewer_v2.1

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  CMakeLists.txt.user.014b629  CMakeLists.txt.user.1d144ef  Makefile  main.cc  main.cpp  valgrind.txt
src/Controller/: controller.cc  controller.h
src/Libs/: omp.h  s21_matrix_oop.cc  s21_matrix_oop.h
src/Libs/gifimage/: qgifglobal.h  qgifimage.cpp  qgifimage.h
src/Matrix/: s21_matrix_oop.cc  s21_matrix_oop.h
src/Model/: affine.cc  affine.h  model.cc  model.h  parser.cc  parser.h
src/View/: glwidget.cc  glwidget.h  mainwindow.cc  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  stylehelper.cc  stylehelper.h
src/View/3dViewerUI/: 3dViewerUI.pro  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/View/3dViewerUI/assets/: AppIcon.icns
src/View/res/: res.qrc
src/View1/: glwidget.cc  glwidget.h  mainwindow.cc  mainwindow.h  mainwindow.ui
src/View2/: mainwindow1.cc  mainwindow1.h  mainwindow1.ui
src/modules/: affine_transformations.c  affine_transformations.h  model_loading.c  model_loading.h  s21_3dviewer.h
src/tests/: CMakeLists.txt  test.cc
src/tmp/: CMakeLists.txt
src/tmp/tests/: CMakeLists.txt  test.cc  unit_tests.c
